docs_edit_panel/style.css
#app {
  display: flex;
  flex-direction: column;
  margin: 0;
}

#docs-form {
  width: 100%;
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 1.5rem;
}

.documentation {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 1.5rem;
}

.documentation-options {
  width: 15rem;
  grid-column-gap: 0.5rem;
}

#submit-button {
  width: fit-content;
}

@media screen and (min-width: 1024px) {
  #app {
    max-width: 1024px;
  }
}

.rating {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 1.5rem;
}

.dropdown-container {
  box-sizing: border-box;
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
  justify-content: flex-start;
}

.dropdown-container label {
  display: block;
  color: var(--vscode-foreground);
  cursor: pointer;
  font-size: var(--vscode-font-size);
  line-height: normal;
  margin-bottom: 2px;
}

#spinner {
  display: block;
  min-width: 100px;
  width: 100px;
  height: 100px;
  margin-top: 25px;
  justify-self: center;
  margin-left: auto;
  margin-right: auto;
}

.column-actions {
  display: inline-flex;
}

.gen-button {
  width: inherit;
}

